--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3",
     "@next/eslint-plugin-next": "^15.3.0",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/webpack": "^5.28.5",
     "@typescript-eslint/parser": "^8.30.1",
     "eslint": "^9.23.0",
     "eslint-config-next": "15.2.4",
@@ -38,7 +40,8 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.99.5"
   },
   "lint-staged": {
     "*.js": [
