--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "paths": {
       "@/styles/*": ["app/_styles/*"],
       "@/components/*": ["app/_components/*"],
-      "@/constants/*": ["app/_constants/*"]
+      "@/constants/*": ["app/_constants/*"],
+      "@/mocks/*": ["app/_mocks/*"]
     }
   },
   "include": [
