style: 코드 스타일 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@/styles/*": ["app/_styles/*"],
       "@/components/*": ["app/_components/*"],
       "@/constants/*": ["app/_constants/*"],
-      "@/utils/*": ["app/_utils/*"]
+      "@/utils/*": ["app/_utils/*"],
       "@/mocks/*": ["app/_mocks/*"]
     }
   },
