[Refactor/#23] 스타일 관련 리팩토링 및 홈 퍼블리싱 (#24)
* feat: home 페이지 퍼블리싱

* style: 코드 스타일 수정

* refactor: 레이아웃 수정

* style: 하단 padding 추가

* style: 공통 레이아웃 수정

* refactor: 라우팅 추가

* chore: 패키지 추가
radix-ui/react-slot, class-variance-authority, lucide-react

* chore: 기타 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
 
 jobs:
   build:
@@ -23,7 +23,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.CURIO_KEY }}
         with:
-          source-directory: 'output'
+          source-directory: "output"
           destination-github-username: Sohyunnnn
           destination-repository-name: CURIO-FE
           user-email: ${{ secrets.EMAIL }}
