--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@/components/*": ["app/_components/*"],
       "@/constants/*": ["app/_constants/*"],
       "@/utils/*": ["app/_utils/*"],
-      "@/mocks/*": ["app/_mocks/*"]
+      "@/mocks/*": ["app/_mocks/*"],
+      "@/stores/*": ["app/_stores/*"]
     }
   },
   "include": [
