[Feature/#45] 시각화 컴포넌트 구현 (#48)
* style: 디테일 및 큨 스타일 수정

* chore: add @visx/wordcloud

* feat: 시각화 컴포넌트 구현

* chore: add seedrandom

* chore: add "@types/seedrandom

* style: 스타일 수정

--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.4",
+    "@types/d3-scale": "^4.0.9",
+    "@visx/wordcloud": "^3.12.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-cloud": "^1.2.7",
+    "d3-random": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "lucide-react": "^0.503.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "seedrandom": "^3.0.5",
     "tailwind-merge": "^3.2.0",
     "tanstack-query": "^1.0.0",
     "zustand": "^5.0.4"
@@ -33,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/seedrandom": "^3.0.8",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/parser": "^8.30.1",
     "eslint": "^9.23.0",
