[Feature/#47] 상세페이지Feature/#47] 기사 상세페이지 api연결 (비로그인) (#50)
* chore: tanstack/react-query 추가

* feat: 상세페이지 헤드라인 및 이미지 api연결

* feat: 상세페이지 요약 정도 버튼 api연결

* feat: 상세페이지 폰트 사이즈 버튼 api연결

* asset: 상세페이지 좋아요 버튼 수정

* refactor: 리뷰반영 summary-type추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
       "@/constants/*": ["app/_constants/*"],
       "@/utils/*": ["app/_utils/*"],
       "@/mocks/*": ["app/_mocks/*"],
-      "@/stores/*": ["app/_stores/*"]
+      "@/stores/*": ["app/_stores/*"],
+      "@/apis/*": ["app/_apis/*"],
+      "@/hooks/*": ["hooks/*"]
     }
   },
   "include": [
