--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-switch": "^1.2.4",
     "@types/d3-scale": "^4.0.9",
     "@visx/wordcloud": "^3.12.0",
+    "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
