--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.4",
+    "@tanstack/react-query": "^5.76.1",
     "@types/d3-scale": "^4.0.9",
     "@visx/wordcloud": "^3.12.0",
-    "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3-cloud": "^1.2.7",
     "d3-random": "^3.0.1",
     "d3-scale": "^4.0.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -37,6 +38,7 @@
     "@next/eslint-plugin-next": "^15.3.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
