--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "seedrandom": "^3.0.5",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.2.0",
     "tanstack-query": "^1.0.0",
     "zustand": "^5.0.4"
