--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.2.4",
     "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query-devtools": "^5.80.7",
     "@types/d3-scale": "^4.0.9",
     "@visx/wordcloud": "^3.12.0",
     "axios": "^1.9.0",
